@@ -115,6 +115,10 @@ See the detail of the L<socket|https://linux.die.net/man/2/socket> function in t
 
 If the system call failed, an exception will be thrown with the error code set to the class id of the L<Error::System> class.
 
+=head2 connect_raw
+
+  static method connect_raw : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
+
 =head2 connect
 
   static method connect : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
