@@ -29,6 +29,8 @@ class Sys::Socket {
   
   native static method socket : int ($domain : int, $type : int, $protocol : int);
 
+  native static method connect_raw : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
+  
   native static method connect : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
 
   native static method bind : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
